	* Thanks to a patch from Intel, the Bonjour prpl now supports file
	  transfers using XEP-0096 and XEP-0065.  This should enable file
	  transfers between libpurple clients and Gajim clients, but will not
	  work with iChat or Adium as they use a different file transfer
	  implementation.
	* XMPP password changes that return errors no longer cause the saved
	  password to be changed.

	Pidgin:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.
	* Mark dialog windows as transient for appropriate parent windows to
	  help window managers do the right thing  (Gabriel Schulhof)
	* Connection errors are now reported in mini-dialogs inside the buddy
	  list, rather than as buttons in the buddy list and with dialog
	  boxes.  If several accounts are disabled when you sign on elsewhere,
	  you can now re-enable them all with a single click.
	* Added tooltips to the Room List window to show full topics
	* Added buttons in preferences to access GNOME network and browser
	  preferences configuration dialogs when running under GNOME
	* If you alias a buddy to an alias that is already present within
	  a particular group, we now offer to merge the buddies into the
	  same contact.
	* A music emblem is now displayed in the buddy list for a buddy if we
	  know she is listening to some soothing music.
	* Added a 'Move to' menu in buddy list context menu for moving buddies
	  to other groups as an alternative to dragging.
	* Group headings are now marked via an underline instead of a
	  different color background.
	* It is now possible to mark a chat on your buddy list as "Persistent"
	  so you do not leave the chat when the window or tab is closed.
	* The auto-join option for chats is now listed in the "Add Chat"
	  dialog along with the new persistence option.