@@ -233,7 +233,15 @@ init_plugin(PurplePlugin *plugin)
 	prpl_info.protocol_options = g_list_append(prpl_info.protocol_options,
 											   option);
 	
-	
+#if 0 /* TODO: Enable this when we're string unfrozen */
+	option = purple_account_option_string_new(_("File transfer proxies"),
+						  "ft_proxies",
+						/* TODO: Is this an acceptable default? */
+						  "proxy.jabber.org:7777");
+	prpl_info.protocol_options = g_list_append(prpl_info.protocol_options,
+						  option);
+#endif
+
 	jabber_init_plugin(plugin);
 	
 	purple_prefs_remove("/plugins/prpl/jabber");
